--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Node API 3 Project",
     "main": "index.js",
     "scripts": {
-        "server": "nodemon index.js"
+        "server": "nodemon --require dotenv/config index.js"
     },
     "repository": {
         "type": "git",
@@ -24,6 +24,7 @@
     "homepage": "https://github.com/LambdaSchool/node-api3-project#readme",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "knex": "^0.21.8",
         "sqlite3": "^5.0.0"
